Added update for Glava_1_Introduction

--- a/Novice_Motorist/Novice_Motorist.csproj
+++ b/Novice_Motorist/Novice_Motorist.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Guid\Form1.cs">
+    <Compile Include="Guid\Form_Glava_1_Introduction.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Guid\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Guid\Form_Glava_1_Introduction.Designer.cs">
+      <DependentUpon>Form_Glava_1_Introduction.cs</DependentUpon>
     </Compile>
     <Compile Include="Main\Form_Main.cs">
       <SubType>Form</SubType>
@@ -66,8 +66,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Guid\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Guid\Form_Glava_1_Introduction.resx">
+      <DependentUpon>Form_Glava_1_Introduction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main\Form_Main.resx">
       <DependentUpon>Form_Main.cs</DependentUpon>
@@ -108,6 +108,8 @@
     <None Include="Image\1x\Button_Hide_Move.png" />
     <None Include="Image\1x\Button_Back.png" />
     <None Include="Image\1x\Button_Back_Move.png" />
+    <None Include="Image\1x\Logotype.png" />
+    <None Include="Image\1x\novicedriver_black.png" />
     <Content Include="Image\exit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
