--- a/Novice_Motorist/Novice_Motorist.csproj
+++ b/Novice_Motorist/Novice_Motorist.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Guid\Form_Glava_4_Power.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Guid\Form_Glava_4_Power.Designer.cs">
+      <DependentUpon>Form_Glava_4_Power.cs</DependentUpon>
+    </Compile>
     <Compile Include="Guid\Form_Glava_3_Fuel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Guid\Form_Glava_3_Fuel.resx">
       <DependentUpon>Form_Glava_3_Fuel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Guid\Form_Glava_4_Power.resx">
+      <DependentUpon>Form_Glava_4_Power.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main\Form_Main.resx">
       <DependentUpon>Form_Main.cs</DependentUpon>
