--- a/Novice_Motorist/Novice_Motorist.csproj
+++ b/Novice_Motorist/Novice_Motorist.csproj
@@ -15,6 +15,21 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,6 +76,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\Cars.cs">
+      <DependentUpon>Database_Cars_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\Cars_Info.cs">
+      <DependentUpon>Database_Cars_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\Database_Cars_Model.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database_Cars_Model.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\Database_Cars_Model.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database_Cars_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\Database_Cars_Model.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database_Cars_Model.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Guid\Form_Glava_5_ADDOption.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +167,13 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Database\Database_Cars_Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Database_Cars_Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Database\Database_Cars_Model.edmx.diagram">
+      <DependentUpon>Database_Cars_Model.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -151,7 +194,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Database\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +202,30 @@
     <None Include="Image\1x\carbody.jpg" />
     <None Include="Image\1x\types_body_cars.jpeg" />
     <None Include="Image\1x\picture_parking_device.jpg" />
+    <Content Include="Database\Database_Cars.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database\Database_Cars_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>Database_Cars.mdf</DependentUpon>
+    </Content>
+    <Content Include="Database\Database_Cars_Model.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Database_Cars_Model.Context.cs</LastGenOutput>
+      <DependentUpon>Database_Cars_Model.edmx</DependentUpon>
+    </Content>
+    <Content Include="Database\Database_Cars_Model.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Database_Cars_Model.edmx</DependentUpon>
+      <LastGenOutput>Database_Cars_Model.cs</LastGenOutput>
+    </Content>
+    <Content Include="Database_Cars.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Database_Cars_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>Database_Cars.mdf</DependentUpon>
+    </Content>
     <Content Include="logopng.ico" />
     <None Include="Image\1x\Button_Hide.png" />
     <None Include="Image\1x\Button_Exite.png" />
@@ -171,6 +237,21 @@
     <None Include="Image\1x\novicedriver_black.png" />
     <None Include="Image\1x\bg_image.png" />
     <Content Include="Image\exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
