--- a/Novice_Motorist/Novice_Motorist.csproj
+++ b/Novice_Motorist/Novice_Motorist.csproj
@@ -105,6 +105,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View cars\Brand_Cars.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View cars\Brand_Cars.Designer.cs">
+      <DependentUpon>Brand_Cars.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Guid\Form_Glava_1_Introduction.resx">
       <DependentUpon>Form_Glava_1_Introduction.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +137,9 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="View cars\Brand_Cars.resx">
+      <DependentUpon>Brand_Cars.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -155,11 +164,15 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Image\1x\1x\logo_auto_volkswagen.png" />
     <None Include="Image\1x\1x\logo_auto_volkswagen_1.png" />
     <None Include="Image\1x\carbody.jpg" />
     <None Include="Image\1x\types_body_cars.jpeg" />
     <None Include="Image\1x\picture_parking_device.jpg" />
+    <None Include="Image\1x\1x\1x\brand_chev.png" />
+    <None Include="Image\1x\1x\1x\brand_kia.png" />
+    <None Include="Image\1x\1x\1x\brand_mits.png" />
+    <None Include="Image\1x\1x\1x\brand_ford.png" />
+    <None Include="Image\1x\1x\1x\brand_citr.png" />
     <Content Include="logopng.ico" />
     <None Include="Image\1x\Button_Hide.png" />
     <None Include="Image\1x\Button_Exite.png" />
