--- a/Novice_Motorist/Novice_Motorist.csproj
+++ b/Novice_Motorist/Novice_Motorist.csproj
@@ -111,6 +111,12 @@
     <Compile Include="View cars\Brand_Cars.Designer.cs">
       <DependentUpon>Brand_Cars.cs</DependentUpon>
     </Compile>
+    <Compile Include="View cars\Form_Volkswagen_Cars.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View cars\Form_Volkswagen_Cars.Designer.cs">
+      <DependentUpon>Form_Volkswagen_Cars.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Guid\Form_Glava_1_Introduction.resx">
       <DependentUpon>Form_Glava_1_Introduction.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View cars\Brand_Cars.resx">
       <DependentUpon>Brand_Cars.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View cars\Form_Volkswagen_Cars.resx">
+      <DependentUpon>Form_Volkswagen_Cars.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
